frame/support/test/tests/construct_runtime_ui/empty_pallet_path.stderr
error: expected one of: `crate`, `self`, `super`, identifier
 --> tests/construct_runtime_ui/empty_pallet_path.rs:6:11
  |
6 |         system: ,
  |                 ^
