frame/support/test/tests/construct_runtime_ui/empty_pallet_path.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		Block = Block,
		NodeBlock = Block,
		UncheckedExtrinsic = UncheckedExtrinsic
	{
		system: ,
	}
}

fn main() {}
